--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,10 +16,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200..800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/rating.css">
+<link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet">
+<script src="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.js"></script>
+<link rel="stylesheet" href="/css/filter.css">
 </head>
 <body>
     <%-include("../includes/navbar.ejs")%>
-    <h2>wonderlust</h2>
+    <!-- <h2>wonderlust</h2> -->
     <div class="container">
        <%-include("../includes/flash.ejs")%>
         <%- body -%>
@@ -27,7 +30,13 @@
     <%-include("../includes/footer.ejs")%>
     
     
+    
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
+   
+   
+   
+   
 </body>
 </html>
