--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,74 +1,104 @@
 <% layout("/layouts/boilerplate") %>
+<style>
+    @media only screen and (max-width:699px){
+        .edit .col-8.offset-2{
+            margin-left: 0;
+            margin-top: 1rem;
+            width: 80%;
+        }
+        .edit .mb-3{
+            margin-top: 1rem;
+        }
+        .edit .row .col-8{
+            margin-top: 0.3rem;
+        }
+        .edit .row .col-4 .mb-3{
+            width: 150px; ;
+            margin-top: 1rem;
+        }
+    }
+</style>
 
-    <div class="row">
-        <div class="col-8 offset-2">
+    <div class="edit">
+        <div class="row">
+            <div class="col-8 offset-2">
 
 
-            <h2>Edit listing</h2>
-            <form method="post" action="/listings/<%=listing._id%>?_method=PUT" class="needs-validation" novalidate>
-                <!-- To ease for accessing the data in app.js from the request body we make the object key listing k  -->
+                <h2>Edit listing</h2>
+                <form method="post" action="/listings/<%=listing._id%>?_method=PUT" class="needs-validation" novalidate
+                    enctype="multipart/form-data">
+                    <!-- To ease for accessing the data in app.js from the request body we make the object key listing k  -->
 
-                <div class="mb-3">
-                    <label class="form-label" for="tiitle">Title</label>
-                    <input name="listing[title]" value="<%=listing.title%>" id="title" class="form-control" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-
-                <div class="mb-3">
-                    <label class="form-label" for="description">Description</label>
-                    <textarea name="listing[description]" id="description" class="form-control"
-                        required> <%=listing.description%></textarea>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-
-                <div class="mb-3">
-                    <label class="form-label" for="image">Image</label>
-                    <input name="listing[image][url]" value="<%=listing.image.url%>" id="image" class="form-control"
-                        required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-8">
-                        <div class="mb-3">
-                            <label class="form-label" for="price">Price</label>
-                            <input name="listing[price]" value="<%=listing.price%>" type="number" id="price"
-                                class="form-control" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="tiitle">Title</label>
+                        <input name="listing[title]" value="<%=listing.title%>" id="title" class="form-control"
+                            required>
+                        <div class="valid-feedback">
+                            Looks good!
                         </div>
                     </div>
 
-                    <div class="col-4">
-                        <div class="mb-3">
-                            <label class="form-label" for="location">location</label>
-                            <input name="listing[location]" value="<%=listing.location%>" id="location"
-                                class="form-control" required>
-                            <div class="invalid-feedback">
-                                Please enter valid country
-                            </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="description">Description</label>
+                        <textarea name="listing[description]" id="description" class="form-control"
+                            required> <%=listing.description%></textarea>
+                        <div class="valid-feedback">
+                            Looks good!
                         </div>
                     </div>
-                </div>
+                    <%if (originalImageUrl.includes("cloudinary.com")) {%>
+                        <div class="mb-3">
+                            original listing image<br>
+                            <img src="<%=originalImageUrl%>">
+                        </div>
+                        <%} %>
 
-                <div class="mb-3">
-                    <label class="form-label" for="country">country</label>
-                    <input name="listing[country]" value="<%=listing.country%>" id="country" class="form-control"
-                        required>
-                    <div class="invalid-feedback">
-                        Please enter valid country
-                    </div>
-                </div>
-                <br>
-                <button class="btn btn-dark edit-btn">edit</button>
-                <br><br>
-            </form>
+
+                            <div class="mb-3">
+                                <label class="form-label" for="image">Upload new image</label>
+                                <input name="listing[image]" value="<%=listing.image.url%>" id="image"
+                                    class="form-control" type="file">
+                                <div class="valid-feedback">
+                                    Looks good!
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-8">
+                                    <div class="mb-3">
+                                        <label class="form-label" for="price">Price</label>
+                                        <input name="listing[price]" value="<%=listing.price%>" type="number" id="price"
+                                            class="form-control" required>
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-4">
+                                    <div class="mb-3">
+                                        <label class="form-label" for="location">location</label>
+                                        <input name="listing[location]" value="<%=listing.location%>" id="location"
+                                            class="form-control" required>
+                                        <div class="invalid-feedback">
+                                            Please enter valid country
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mb-3">
+                                <label class="form-label" for="country">country</label>
+                                <input name="listing[country]" value="<%=listing.country%>" id="country"
+                                    class="form-control" required>
+                                <div class="invalid-feedback">
+                                    Please enter valid country
+                                </div>
+                            </div>
+                            <br>
+                            <button class="btn btn-dark edit-btn">edit</button>
+                            <br><br>
+                </form>
+            </div>
         </div>
     </div>
