--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,79 +1,137 @@
 <% layout("/layouts/boilerplate") %>
+  <style>
+    @media only screen and (max-width:699px) {
+      .new .col-8.offset-2 {
+        margin-left: 0.2rem;
+        margin-top: 1rem;
+        
+        width: 80%;
+      }
+    }
+  </style>
 
-    <body>
-        <!-- <div class="row"> -->
-        <!-- if we want space from left side then we use offset-2  -->
-        <div class="col-8 offset-2">
-            <h2>Create new listing</h2>
-            <form method="post" action="/listings" class="needs-validation" novalidate>
-                <!-- To ease the parsing the data in app.js we make the object key  -->
-                <!-- //mb-3 means margin bottam 3 -->
-                <div class="mb-3">
-                    <label class="form-label" for="title">Title</label>
-                    <input name="listing[title]" placeholder="Add a catchy tiitle" class="form-control" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-
-
-                <div class="mb-3">
-                    <label for="description" class="form-label">Description</label>
-                    <textarea name="listing[description]" placeholder="Enter description" class="form-control"
-                        required></textarea>
-                    <div class="invalid-feedback">
-                        Please provide a valid .
-                    </div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="image" class="form-label">Image</label>
-                    <input name="listing[image][url]" placeholder="Enter Image URL/Link" class="form-control">
-
-                    <!-- <div class="invalid-feedback">
-                        Please provide a valid image.
-                    </div> -->
-                </div>
-
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="mb-3">
-                            <label for="price" class="form-label">Price</label>
-                            <input name="listing[price]" placeholder="1200"  class="form-control"  required>
-                            <div class="invalid-feedback">
-                                Please provide a valid city.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="mb-3">
-                            <label for="location" class="form-label">location</label>
-                            <input name="listing[location]" placeholder="Gurugram,chandigurh,Hisar" class="form-control"
-                                required>
-                                <div class="invalid-feedback">
-                                    Please provide a valid location.
-                                </div>
-                        </div>
-                        
-                    </div>
-
-
-                </div>
-                <div class="mb-3">
-                    <label for="location" class="form-label">country</label>
-                    <input name="listing[country]" placeholder="India" class="form-control required">
-                    <div class="invalid-feedback">
-                        Please provide a valid country.
-                    </div>
-                </div>
-                <br>
-                <button class="btn btn-dark add-btn mt-3">Submit</button>
-                <br><br><br>
-            </form>
-
+  <div class="new">
+    <!-- if we want space from left side then we use offset-2  -->
+    <div class="col-8 offset-2">
+      <h2>Create new listing</h2>
+      <form method="post" action="/listings" class="needs-validation" novalidate enctype="multipart/form-data">
+        <!-- /* To ease the parsing the data in app.js we make the object key */ -->
+        <!-- /* //mb-3 means margin bottam 3 */ -->
+        <div class="mb-3">
+          <label class="form-label" for="title">Title</label>
+          <input name="listing[title]" placeholder="Add a catchy tiitle" class="form-control" required />
+          <div class="valid-feedback">Looks good!</div>
         </div>
-       
 
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea name="listing[description]" placeholder="Enter description" class="form-control"
+            required></textarea>
+          <div class="invalid-feedback">Please provide a valid .</div>
+        </div>
 
-    </body>
+        <div class="row">
+          <div class="col-9">
+            <div class="mb-3">
+              <label for="image" class="form-label">Upload listing Image</label>
+              <input name="listing[image][url]" class="form-control" type="file" required />
+            </div>
+          </div>
+
+          <div class="col-2">
+            <div class="dropdown dropstart" required>
+              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                listing related to
+              </button>
+              <ul class="dropdown-menu">
+                <li>
+                  <button class="dropdown-item" type="button" data-value="Rooms">
+                    Rooms
+                  </button>
+                </li>
+                <li>
+                  <button class="dropdown-item" type="button" data-value="Mountain city">
+                    Mountain city
+                  </button>
+                </li>
+                <li>
+                  <button class="dropdown-item" type="button" data-value="Mountains">
+                    Mountains
+                  </button>
+                </li>
+                <li>
+                  <button class="dropdown-item" type="button" data-value="Castles">
+                    Castles
+                  </button>
+                </li>
+                <li>
+                  <button class="dropdown-item" type="button" data-value="Amazing-pools">
+                    Amazing-pools
+                  </button>
+                </li>
+                <li>
+                  <button class="dropdown-item" type="button" data-value="Camping">
+                    Camping
+                  </button>
+                </li>
+                <li>
+                  <button class="dropdown-item" type="button" data-value="Farms">
+                    Farms
+                  </button>
+                </li>
+                <li>
+                  <button class="dropdown-item" type="button" data-value="Arctic">
+                    Arctic
+                  </button>
+                </li>
+              </ul>
+            </div>
+
+            <!-- we have created hidden input to store the user input hidden input -->
+
+            <input type="hidden" name="listing[category]" id="selectedCategory" value="" required />
+            <!-- <div class="invalid-feedback">Please select a category.</div> -->
+
+            <script>
+              document.querySelectorAll(".dropdown-item").forEach((item) => {
+                item.addEventListener("click", () => {
+                  const selectedValue = event.target.getAttribute("data-value");
+                  document.getElementById("selectedCategory").value = selectedValue;
+                  /* Update the main dropdown button's text to reflect the selected item */
+                  document.querySelector(".dropdown-toggle").innerText =
+                    selectedValue;
+                });
+              });
+            </script>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-8">
+            <div class="mb-3">
+              <label for="price" class="form-label">Price</label>
+              <input name="listing[price]" placeholder="1200" class="form-control" required />
+              <div class="invalid-feedback">Please Enter listing price</div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="mb-3">
+              <label for="location" class="form-label">location</label>
+              <input name="listing[location]" placeholder="New Delhi,India" class="form-control" required />
+              <div class="invalid-feedback">Please provide a valid location.</div>
+            </div>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="location" class="form-label">country</label>
+          <input name="listing[country]" placeholder="India" class="form-control required" />
+          <div class="invalid-feedback">Please provide a valid country.</div>
+        </div>
+        <br />
+        <button class="btn btn-dark add-btn mt-3" type="submit">Submit</button>
+        <br /><br /><br />
+      </form>
+    </div>
+  </div>
