--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,104 +1,105 @@
-<% layout ("/layouts/boilerplate")%>
+<% layout ("/layouts/boilerplate") %>
+<script>
+    let mapToken = "<%=process.env.MAP_TOKEN%>";
+    let listing = <%- JSON.stringify(listing) %>;
+</script>
 
-  <body>
+<div class="container">
     <div class="row">
-      <div class="col-8 offset-3 mt-3 mb-3">
-        <h3>
-          <%=listing.title%>
-        </h3>
-        <div>
-
-          <div class="card col-6 offset-0 listing-card">
-
-            <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
-            <div class="card-body">
-              <p class="card-text">
-              <p>owned by &nbsp;<i>
-                  <%=listing.owner.username%>
-                </i></p>
-
-              <%=listing.description%><br>
-                <%=listing.location%><br>
-                  &#8377; <%=listing.price.toLocaleString("en-IN")%><br>
-                    </p>
+        <div class=" col-sm-12 col-lg-6 offset-lg-3 offset-auto ">
+            <h3><%= listing.title %></h3>
+            <div class="card listing-card">
+                <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+                <div class="card-body">
+                    <p>Owned by <i><%= listing.owner.username %></i></p>
+                    <p><%= listing.description %></p>
+                    <p><%= listing.location %> (<%= listing.country %>)</p>
+                    <p>₹ <%= listing.price.toLocaleString("en-IN") %></p>
+                </div>
             </div>
-          </div>
 
-         <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
-            <div class="btns">
-              <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-                <button class="btn btn-dark  ">Delete</button>
-              </form>
-              <form method="get" action="/listings/<%= listing._id %>/edit">
-                <button class="btn btn-dark offset-5 edit-btn">Edit</button>
-              </form>
-              <br><br> <br>
-
+            <% if(currUser && currUser._id.equals(listing.owner._id)) { %>
+            <div class="d-flex mt-3">
+                <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+                    <button class="btn btn-dark  me-2">Delete</button>
+                </form>
+                <form method="get" action="/listings/<%= listing._id %>/edit">
+                    <button class="btn btn-dark">Edit</button>
+                </form>
             </div>
             <% } %>
-              <hr>
-             <% if(currUser) {%>
-              <div class="col-8 mt-3">
-                <h2>Leave a Review</h2>
-                <form action="/listings/<%=listing._id%>/reviews" method="post" novalidate class="needs-validation">
-                  <div class="mt-3 mb-3">
+            <hr>
+        </div>
+        
+        <% if(currUser) { %>
+        <div class="col-12 mt-4 col-lg-6 offset-lg-3 offset-auto">
+            <h2>Leave a Review</h2>
+            <form action="/listings/<%= listing._id %>/reviews" method="post" class="needs-validation" novalidate>
+                <!-- Review Form here -->
+              
+                <div class="mt-3 mb-3">
                     <label for="rating" class="form-label">Rating</label>
                     <fieldset class="starability-slot">
-                      <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                      <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                      <label for="first-rate1" title="Terrible">1 star</label>
-                      <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                      <label for="first-rate2" title="Not good">2 stars</label>
-                      <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                      <label for="first-rate3" title="Average">3 stars</label>
-                      <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                      <label for="first-rate4" title="Very good">4 stars</label>
-                      <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                      <label for="first-rate5" title="Amazing">5 stars</label>
+                        <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]"
+                            value="1" checked aria-label="No rating." />
+                        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                        <label for="first-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                        <label for="first-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                        <label for="first-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                        <label for="first-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                        <label for="first-rate5" title="Amazing">5 stars</label>
                     </fieldset>
-                  </div>
-                  
-                  <div class="mt-3 mb-3">
+                </div>
+                
+                <div class="mt-3 mb-3">
                     <label id="comments" class="form-label">Comments</label>
-                    <textarea name="review[comment]" for="comments" rows="5" cols="80" class="form-control"
-                      required></textarea>
+                    <textarea name="review[comment]" for="comments" rows="6" cols="80"
+                        class="form-control" required></textarea>
                     <div class="invalid-feedback">
-                      please add some comments for listings .
+                        please add some comments for listings .
                     </div>
                     <br>
                     <button class="btn btn-dark ">Submit</button>
                     <br>
-                </form>
-              </div>
-              <hr>
-             <% }%>
-              
-              <p><b>All reviews</b></p>
-              <div class="row">
-                <% for (review of listing.reviews){%>
-                  <div class="card col-5 ms-3 mb-3">
-                    <div class="card-body ">
-                      <h5 class="card-title">@ <%=review.author.username%></h5>
-                      <p class="starability-result card-text" data-rating= "<%=review.rating%>">
-                        
-                      </p>
-                      <p class="card-text">
-                        <%=review.comment%>
-                      </p>
-                      
-                     
-                      <form method="post" class="mb-3"
-                        action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
-                        <button class="btn btn-dark btn-sm">Delete</button>
-                      </form>
-
-                    </div>
-                  </div>
-                  <% } %>
-              </div>
-
-
-
+            </form>
         </div>
-      </div>
-  </body>
+        <hr>
+                          
+
+            </form>
+        </div>
+        <% } %>
+
+        <div class="col-6 mt-4 offset-lg-3 offset-auto ">
+            <h2 class="mb-3">All Reviews</h2>
+            <div class="row">
+                <% for (review of listing.reviews) { %>
+                <div class="col-md-5 ms-3 mb-3">
+                    <div class="card">
+                        <div class="card-body ms-3 ">
+                            <h5 class="card-title">@ <%= review.author.username %></h5>
+                            <p class="starability-result" data-rating="<%= review.rating %>"></p>
+                            <p><%= review.comment %></p>
+                            <form method="post"
+                                action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+                                <button class="btn btn-dark btn-sm mb-2">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
+            </div>
+        </div>
+
+        <div class="col-12 mt-4">
+            <h2 class="offset-3 mb-4">Where you'll be</h2>
+            <div id="map"></div>
+        </div>
+    </div>
+</div>
+
+<script src="/js/map.js"></script>
