ptovide extra space

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -26,8 +26,9 @@
     /* margin-right: 10rem; */
     height: 2.5rem;
     border-radius: 25px;
-    padding: 0.5rem 0.3rem 0.5rem 2rem;
+    padding:auto;
     font-size: 1rem;
+    text-align: center;
   }
 
   .both {
@@ -35,6 +36,7 @@
     align-items: center;
 
   }
+  
 
   /* @media only screen and (max-width:699px){
     .navbar-nav.ms-auto{
