--- a/views/listings/option.ejs
+++ b/views/listings/option.ejs
@@ -1,10 +1,15 @@
 <% layout("/layouts/boilerplate")%>
+<style>
+    @media only screen and (max-width:699px){
+
+    }
+</style>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <%for(let listing of listings){%>
             <a href="/listings/<%=listing._id%>" class="listing-link">
                 
-                <div class="card col listing-card" style="width: 25rem;">
-                    <img src="<%= listing.image.url%>" class="card-img-top" alt="listing_image" style="height: 20rem">
+                <div class="card col listing-card" >
+                    <img src="<%= listing.image.url%>" class="card-img-top" alt="listing_image" >
                     <div class="card-img-overlay"></div>
                     <div class="card-body">
                         <p class="card-text">
