flash message size

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body {
     height: 5rem;
     background-color: white;
     position: sticky;
+   margin-bottom: 1rem !important;
     top: 0;
     /* z-index: 1000;  */
    
