--- a/views/listings/option.ejs
+++ b/views/listings/option.ejs
@@ -4,7 +4,8 @@
 
     }
 </style>
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+
+    <div class="row g-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <%for(let listing of listings){%>
             <a href="/listings/<%=listing._id%>" class="listing-link">
                 
