--- a/views/listings/search.ejs
+++ b/views/listings/search.ejs
@@ -7,7 +7,9 @@
     .alert.alert-success.offset-3.col-6{
       display: flex;
       text-align: center;
-      width: 100%;
+      width: 80%;
+      padding-left: 4rem;
+    margin: auto;
 
     }
   }
@@ -18,6 +20,7 @@
       <%=explicitMessage%>
     </div>
    <% } %>
+  
 
     <script>
       setTimeout(function () {
