--- a/views/listings/option.ejs
+++ b/views/listings/option.ejs
@@ -1,6 +1,20 @@
 <% layout("/layouts/boilerplate")%>
 
+<%if(explicitMessage){%>
 
+    <div class="alert alert-success offset-3 col-6" id="temporaryMessage">
+      <%=explicitMessage%>
+    </div>
+   <% } %>
+  
+
+    <script>
+      setTimeout(function () {
+        let message = document.getElementById("temporaryMessage")
+        message.style.display = "none"
+      }, 1000)
+    </script>
+    
     <div class="row g-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <%for(let listing of listings){%>
             <a href="/listings/<%=listing._id%>" class="listing-link">
