remove spacing from top

--- a/public/css/filter.css
+++ b/public/css/filter.css
@@ -5,7 +5,7 @@
   /* width:80%; */
   align-items: center;
   /* overflow-x: scroll; */
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   position: relative;
  
 
